--- a/src/angular-app/projectadmin/ng-app.html
+++ b/src/angular-app/projectadmin/ng-app.html
@@ -3,23 +3,28 @@
 
 	<tabset>
 	<tab heading="Users">
-		<legend>Add User</legend>
-		<div ng-controller="UserSearchCtrl">
-		<typeahead class="typeahead left span-2" items="user" term="term" search="searchUser(term)" select="selectUser(item)">
-			<ul>
-				<li typeahead-item="user" ng-repeat="user in users" class="typeahead-item">
-					<img width="32px" ng-src="{{imageSource(user.avatarRef)}}" class="left">
-					<p class="name">{{user.name}}</p>
-					<p class="email">{{user.email}}</p>
-				</li>
-			</ul>
-		</typeahead>
-		<button ng-model="addMode" class="btn span-2" ng-click="addUser()"><i ng-class="addModeIcon(addMode)"></i>{{addModeText(addMode)}}</button>
+		<div ng-controller="ProjectUsersCtrl">
+		<p>
+		<a ng-click="newUserCollapsed = !newUserCollapsed">Add User to Project</a>
+		</p>
+		<div collapse="newUserCollapsed">
+			<form class="well form-inline">
+			<typeahead class="typeahead" items="user" term="term" search="queryUser(term)" select="selectUser(item)">
+				<ul>
+					<li typeahead-item="user" ng-repeat="user in users" class="typeahead-item">
+						<img width="32px" ng-src="{{imageSource(user.avatarRef)}}" class="left">
+						<p class="name">{{user.name}}</p>
+						<p class="email">{{user.email}}</p>
+					</li>
+				</ul>
+			</typeahead>
+			<button ng-model="addMode" class="btn" ng-click="addProjectUser()"><i ng-class="addModeIcon(addMode)"></i>{{addModeText(addMode)}}</button>
+			</form>
 		</div>
-		<legend class="">Users</legend>
-		<div ng-controller="UserListCtrl">
-		<button class="btn" ng-click="removeUsers()"><i class="icon-remove"></i>Remove Users</button>
-		<div listview search="queryUsers()" select="">
+		<form class="control-bar form-inline">
+		<button class="btn" ng-click="removeProjectUsers()"><i class="icon-remove"></i>Remove Users</button>
+		</form>
+		<div listview search="queryProjectUsers()" select="">
 		<table class="table" style="width: 100%">
 			<thead>
 			<tr>
@@ -30,7 +35,7 @@
 				</tr>
 			</thead>
 			<tbody>
-			<tr ng-repeat="user in users"	ng-class="{active: isSelected(user)}" >
+			<tr ng-repeat="user in projectusers" ng-class="{active: isSelected(user)}" >
 				<td width="16px" align="center"><input type="checkbox" ng-checked="isSelected(user)" ng-click="updateSelection($event, user)" /></td>
 				<td>{{user.username}}</td>
 				<td>{{user.name}}</td>
@@ -42,7 +47,14 @@
 		</div>
 		
 	</tab>
-	<tab heading="Texts">
+	<tab heading="Project">
+	<form class="well">
+	<fieldset>
+		<label>Project Name</label>
+		<input type="text" placeholder="(project name)" ng-model="user.username"/>
+	</fieldset>
+	<button type="submit" class="btn">Save</button>
+	</form>
 	</tab>
 	</tabset>
 </div>
