--- a/src/angular-app/userprofile/ng-app.html
+++ b/src/angular-app/userprofile/ng-app.html
@@ -10,9 +10,9 @@
 								<label>Username</label>
 								<input type="text" placeholder="(username)" ng-model="user.username"/>
 								<label>Picture</label>
+								<select ng-model="user.avatar_color" ng-include src=" '/angular-app/userprofile/avatar_color.html' "/></select>
+								<select ng-model="user.avatar_shape" ng-include src=" '/angular-app/userprofile/avatar_shape.html' "/></select>
 								<img class="img-polaroid" src="/images/avatar/anonymous02.png" />
-								<label>Full Name</label>
-								<input type="text" placeholder="(full name)" ng-model="user.name"/>
 								<label>Email Address</label>
 								<input type="text" placeholder="(email)" ng-model="user.email"/>
 								<label>Jamaica Mobile Phone Number</label>
@@ -29,6 +29,8 @@
 							</tab>
 							<tab heading="About Me">
 								<h5>Tell us about yourself...</h5>
+								<label>Full Name</label>
+								<input type="text" placeholder="(full name)" ng-model="user.name"/>
 								<label>Age</label>
 								<input type="text" placeholder="(age)" ng-model="user.age"/>
 								<label>Gender</label>
