wip: adding avatar drop downs to user profile
also updated the "change password" link in the CI header


Former-commit-id: 0b83d5922bcc5259d07c04a5c1bb166a240cf21d

--- a/src/angular-app/userprofile/avatar_shape.html
+++ b/src/angular-app/userprofile/avatar_shape.html
@@ -1,5 +1,17 @@
-﻿<option value="unspecified">Choose an animal...</option>
-<option value="horse">horse</option>
-<option value="fox">fox</option>
-<option value="frog">frog</option>
-<option value="cat">cat</option>
+﻿<option value="">Choose an animal...</option>
+<option value="camel">Camel</option>
+<option value="cow">Cow</option>
+<option value="dog">Dog</option>
+<option value="elephant">Elephant</option>
+<option value="frog">Frog</option>
+<option value="gorilla">Gorilla</option>
+<option value="hippo">Hippo</option>
+<option value="horse">Horse</option>
+<option value="kangaroo">Kangaroo</option>
+<option value="mouse">Mouse</option>
+<option value="otter">Otter</option>
+<option value="pig">Pig</option>
+<option value="rabbit">Rabbit</option>
+<option value="rhino">Rhino</option>
+<option value="sheep">Sheep</option>
+<option value="tortoise">Tortoise</option>
