--- a/src/angular-app/userprofile/ng-app.html
+++ b/src/angular-app/userprofile/ng-app.html
@@ -18,12 +18,11 @@
 								<label>Jamaica Mobile Phone Number</label>
 								<input type="text" placeholder="###-####" ng-model="user.mobile_phone"/>
 								<label>I preferred to be contacted via</label>
-								<!--  CH - TODO make this work right (model is not updating, and it submits on every button press -->
-								<div class="btn-group">
-									<a class="btn" ng-model="contact_method" btn-radio=" 'email' ">Email</a>
-									<a class="btn" ng-model="contact_method" btn-radio=" 'sms' ">SMS</a>
-									<a class="btn" ng-model="contact_method" btn-radio=" 'both' ">Email and SMS</a>
-								</div>
+							    <div class="btn-group">
+							        <button type="button" class="btn" ng-model="user.communicate_via" btn-radio="'email'">Email</button>
+							        <button type="button" class="btn" ng-model="user.communicate_via" btn-radio="'sms'">SMS</button>
+							        <button type="button" class="btn" ng-model="user.communicate_via" btn-radio="'both'">Both</button>
+							    </div>
 								
 								<label style="margin-top:20px"><a href="/app/changepassword">Change Password</a></label>
 							</tab>
@@ -52,7 +51,7 @@
 								<select ng-model="user.feedback_group" ng-include src=" '/angular-app/userprofile/jamaica_feedback_groups.html' "/></select>
 							</tab>
 						</tabset>
-						<button style="margin-top:20px" type="submit" class="btn">Save Profile</button>
+						<button style="margin-top:20px" type="submit" class="btn btn-primary">Save Profile</button>
 						<div style="margin-top:20px" class="well">
 							<label>Last Login:  {{user.last_login * 1000 | date:shortDate}}</label>
 						</div>
