wip: activity feed (directive strategy - will refactor to ng-switch)

--- a/src/angular-app/activity/ng-app.html
+++ b/src/angular-app/activity/ng-app.html
@@ -9,7 +9,7 @@
 	<div ng-controller="ActivityCtrl">
 		<div><a href="#" ng-click="filterAllActivity()">All Activity</a> <a href="#" ng-click="filterMyActivity()">Show Only My Activity</a></div>
 		<div ng-repeat="activity in activities">
-			<activity item="activity">
+			<activityitem item="activity">
 		</div>
 	</div>
 </div>
