--- a/src/angular-app/sfchecks/ng-app.html
+++ b/src/angular-app/sfchecks/ng-app.html
@@ -1,6 +1,6 @@
 <div class="container" ng-app="sfchecks" ng-cloak style="margin-top:10px">
 	<div id="sfchecks-hmenu" class="hdrnav">
-		<img src="/images/sf_logo_medium.png" class="left" width="48px" height="60px" />
+		<img src="/images/sf_logo_medium.png" class="left" style="width:48px; height:60px" />
 		<ul style="margin:0; clear:right; overflow:auto">
 			<li class="here"><a href="#/projects">My Projects</a></li>
 			<li><a href="/app/activity">Activity</a></li>
