--- a/src/angular-app/sfchecks/ng-app.html
+++ b/src/angular-app/sfchecks/ng-app.html
@@ -8,6 +8,7 @@
 		<ul id="top" class="topCrumbs" breadcrumbs></ul>
 	</div>
 	<div ng-controller="MainCtrl">
+	<sil-notices></sil-notices>
 	<div ng-view></div>
 	</div>
 </div>
