--- a/src/angular-app/sfadmin/ng-app.html
+++ b/src/angular-app/sfadmin/ng-app.html
@@ -82,7 +82,20 @@
 		<div class="row" ng-controller="TemplateCtrl" style="overflow:hidden">
 			<form class="control-bar form-inline">
 				<button class="btn" ng-click="removeTemplates()"><i class="icon-remove"></i>Remove Templates</button>
+				<button class="btn" ng-click="toggleTemplateEditor()"><i class="icon-pencil"></i>Edit Template</button>
 			</form>
+			<div class="new-item" collapse="!templateEditorVisible">
+				<form class="well">
+				<fieldset>
+				<label>Question Template</label>
+				<input type="text" ng-model="editedTemplate.title" class="span4" rows="4" placeholder="the question"></textarea>
+				<label></label>
+				<textarea ng-model="editedTemplate.description" class="span4" rows="4" placeholder="additional explanation of the question"></textarea>
+				<label></label>
+				<button type="submit" class="btn" ng-click="editTemplate(); hideTemplateEditor()"><i class="icon-plus"></i>Edit Template</button>
+				</fieldset>
+				</form>
+			</div>
 			<div listview search="queryTemplates()" items="templates" visible-items="visibleTemplates" select="">
 			<table style="width: 100%">
 				<tr>
