Minor UI improvement for template editing
Template list in site admin page now has a fixed width for the
"Question Title" column, so a template with a really long description
can't push the title column into a too-small horizontal space.


Former-commit-id: 19b6c6a9f565eb61a68c517ac3433a5efe6cd52c

--- a/src/angular-app/sfadmin/ng-app.html
+++ b/src/angular-app/sfadmin/ng-app.html
@@ -99,7 +99,7 @@
 			<table style="width: 100%">
 				<tr>
 					<th></th>
-					<th>Question title</th>
+					<th class="span3">Question title</th>
 					<th>Question contents</th>
 				</tr>
 				<tr ng-repeat="template in visibleTemplates" ng-class="{active: isSelected(template)}" ng-click="selectRow($index, template)" >
