Revisit header images, add faq.
* Change header image to medium logo everywhere.
* Add faq page.

--- a/src/angular-app/userprofile/ng-app.html
+++ b/src/angular-app/userprofile/ng-app.html
@@ -1,6 +1,6 @@
-<div class="container" ng-app="userProfile" ng-cloak>
+<div class="sfcontainer" ng-app="userProfile" ng-cloak>
 	<div ng-controller="userProfileCtrl">
-	<legend>{{user.name}}'s User Profile</legend>
+	<h1>{{user.name}}'s User Profile</h1>
 	<form ng-submit="updateUser()">
 					<fieldset>
 						<div ng-show="notify.error" class="notification errorMessage">Error: {{notify.error}}</div>
