updated preferred bible list dropdown to specification
Former-commit-id: eaf9bf30870fc8e1220c2cb75abe6bed2020c64f

--- a/src/angular-app/userprofile/jamaica_bible_versions.html
+++ b/src/angular-app/userprofile/jamaica_bible_versions.html
@@ -1,4 +1,8 @@
-﻿<option value="unspecified"></option>
-<option>Jamaica Bible</option>
-<option>English Bible</option>
-<option>English Bible #2</option>
+<option value="unspecified"></option>
+<option>Amplified</option>
+<option>CEV</option>
+<option>ESV</option>
+<option>KJV</option>
+<option>NIV</option>
+<option>Message</option>
+<option>Other</option>
