Fix #59 upload texts
* Disabled textdrop directive which was interfering with uploading of texts (and questions).

--- a/src/angular-app/userprofile/ng-app.html
+++ b/src/angular-app/userprofile/ng-app.html
@@ -51,7 +51,7 @@
 								<select ng-model="user.feedback_group" ng-include src=" '/angular-app/userprofile/jamaica_feedback_groups.html' "/></select>
 							</tab>
 						</tabset>
-						<button style="margin-top:20px" type="submit" class="btn"><i class="icon-ok"></i>Save Profile</button>
+						<button style="margin-top:20px" type="submit" class="btn"><i class="icon-ok"></i>Save</button>
 						<div style="margin-top:20px" class="well">
 							<label>Last Login:  {{user.last_login * 1000 | date:shortDate}}</label>
 						</div>
