fixes #68  changed each angular app to manually bootstrap in order to fix IE 10 bug
It appears that IE 10 (as well as other IE browsers) are firing the documentReady event before all JS resources are loaded.  This manifests itself as angular "unknown module" errors, that happen sometimes.  Sometimes things load in the correct time, and sometime they do not.

See: http://stackoverflow.com/questions/12988506/angularjs-fail-to-load-module

Manually bootstrapping the angular app after we ensure that all JS resources are loaded fixes the problem

--- a/src/angular-app/sfadmin/ng-app.html
+++ b/src/angular-app/sfadmin/ng-app.html
@@ -1,4 +1,4 @@
-<div class="sfcontainer" ng-app="sfAdmin" ng-cloak>
+<div class="sfcontainer" ng-cloak>
 	<h1>Site Administration</h1>
 	<sil-notices></sil-notices>
 
