--- a/src/angular-app/signup/ng-app.html
+++ b/src/angular-app/signup/ng-app.html
@@ -1,4 +1,4 @@
-<div class="sfcontainer container" ng-app="signup" ng-cloak>
+<div class="sfcontainer container" ng-cloak>
 
 		<h1>Create an Account</h1>
 
@@ -43,7 +43,3 @@
 			</form>
 		</div>
 </div>
-
-<script>
-
-</script>
