--- a/src/angular-app/activity/ng-app.html
+++ b/src/angular-app/activity/ng-app.html
@@ -1,4 +1,4 @@
-<div class="container" ng-app="activity" ng-controller="ActivityCtrl" ng-cloak style="margin-top:10px">
+<div class="container" ng-controller="ActivityCtrl" ng-cloak style="margin-top:10px">
 	<div id="sfchecks-hmenu" class="hdrnav">
 		<ul class="topNav" style="margin:0; clear:right; overflow:auto">
 			<li><a href="/app/sfchecks#/projects">My Projects</a></li>
