--- a/src/angular-app/userprofile/ng-app.html
+++ b/src/angular-app/userprofile/ng-app.html
@@ -1,4 +1,4 @@
-<div class="sfcontainer" ng-cloak>
+<div class="content container" ng-cloak>
 	<div ng-controller="userProfileCtrl">
 	<h1>{{user.name}}'s User Profile</h1>
 	<sil-notices></sil-notices>
