--- a/src/angular-app/sfchecks/ng-app.html
+++ b/src/angular-app/sfchecks/ng-app.html
@@ -1,4 +1,4 @@
-<div class="container" ng-cloak style="margin-top:10px">
+<div class="content container" ng-cloak>
 	<div id="sfchecks-hmenu" class="hdrnav">
 		<ul class="topNav" style="margin:0; clear:right; overflow:auto">
 			<li class="here"><a href="#/projects">My Projects</a></li>
