fixed #79  Invite a Friend button now only shows with a project context.
API now had logic to deal with getting a project context from the host in the URL, and throws if there is no project context

--- a/src/angular-app/sfchecks/ng-app.html
+++ b/src/angular-app/sfchecks/ng-app.html
@@ -1,6 +1,6 @@
 <div class="content container" ng-cloak>
 	<div id="sfchecks-hmenu" class="hdrnav">
-		<div ng-controller="inviteAFriend" id="inviteAFriend" class="pull-right">
+		<div ng-controller="inviteAFriend" id="inviteAFriend" class="pull-right" ng-show="showInviteDiv">
 		<div class="overlay" ng-show="showInviteForm">
 		<div class="overlay-bg">
 			<form ng-submit="sendInvite();showInviteForm=false">
