--- a/src/angular-app/activity/ng-app.html
+++ b/src/angular-app/activity/ng-app.html
@@ -1,6 +1,6 @@
 <div class="content container" ng-controller="ActivityCtrl" ng-cloak>
 	<div id="sfchecks-hmenu" class="hdrnav">
-		<div ng-controller="inviteAFriend" id="inviteAFriend" class="pull-right">
+		<div ng-controller="inviteAFriend" id="inviteAFriend" class="pull-right" ng-show="showInviteDiv">
 		<div class="overlay" ng-show="showInviteForm">
 		<div class="overlay-bg">
 			<form ng-submit="sendInvite();showInviteForm=false">
@@ -20,6 +20,7 @@
 		</ul>
 		<ul id="top" class="topCrumbs" breadcrumbs></ul>
 	</div>
+	<sil-notices></sil-notices>
 	<div >
 		<div ng-show="activities.length > 0" style="margin-top:20px"><button class="btn" ng-disabled="showAllActivity" ng-click="filterAllActivity()">All Activity</button> <button class="btn" ng-disabled="!showAllActivity" ng-click="filterMyActivity()">Show Only My Activity</button></div>
 		
