fixed up invite a friend and added PHP tests
Former-commit-id: 35aa6df82649f623ee5e7e8d3e70b024c2a526f5

--- a/src/angular-app/registration/ng-app.html
+++ b/src/angular-app/registration/ng-app.html
@@ -11,7 +11,7 @@
 			<p>We just need a few more details. Please fill out the details below, and click Join when you're done.</p>
 			<fieldset>
 			<div class="well">
-				<h5>{{record.emailPending}}</h5>
+				<h5>{{record.email}}</h5>
 				<label>User Name</label>
 				<input required type="text"
 					placeholder="pick a user name" ng-model="record.username"
