--- a/src/angular-app/signup/ng-app.html
+++ b/src/angular-app/signup/ng-app.html
@@ -8,7 +8,7 @@
 					<div class="well">
 						<div>
 							<label>User Name</label> <input required type="text"
-								placeholder="pick an username" ng-model="record.username"
+								placeholder="pick a username" ng-model="record.username"
 								name="username" id="username" ng-blur="checkUserName()" /> 
 								<span  ng-show="userNameLoading"><img id="userNameLoading" src="/images/loading-small.gif" style="position: absolute; padding-left: 5px; padding-top: 8px;" /></span>
 								<span  ng-show="userNameOk"><img id="userNameOk" src="/images/tick.png" title="User name is available!" style="position: absolute; padding-left: 5px; padding-top: 8px;"/></span>
