--- a/src/angular-app/userprofile/ng-app.html
+++ b/src/angular-app/userprofile/ng-app.html
@@ -42,13 +42,13 @@
 							</tab>
 							<tab heading="Participation Details">
 								<label>Preferred Bible Version</label>
-								<select ng-model="user.preferred_bible_version" ng-options="b.label as b.label for b in dropdown.bibleVersions" /><option value="unspecified"></option></select>
+								<select ng-model="user.preferredBibleVersion" ng-options="b.label as b.label for b in dropdown.bibleVersions" /><option value="unspecified"></option></select>
 								<label>Religious Affiliation</label>
-								<select ng-model="user.religious_affiliation" ng-options="a.label as a.label for a in dropdown.religiousAffiliations"/><option value="unspecified"></option></select>
+								<select ng-model="user.religiousAffiliation" ng-options="a.label as a.label for a in dropdown.religiousAffiliations"/><option value="unspecified"></option></select>
 								<label>Study Group</label>
-								<select ng-model="user.study_group" ng-options="g.label as g.label for g in dropdown.studyGroups"/><option value="unspecified"></option></select>
+								<select ng-model="user.studyGroup" ng-options="g.label as g.label for g in dropdown.studyGroups"/><option value="unspecified"></option></select>
 								<label>Feedback Group</label>
-								<select ng-model="user.feedback_group" ng-options="g.label as g.label for g in dropdown.feedbackGroups"/><option value="unspecified"></option></select>
+								<select ng-model="user.feedbackGroup" ng-options="g.label as g.label for g in dropdown.feedbackGroups"/><option value="unspecified"></option></select>
 							</tab>
 						</tabset>
 						<button style="margin-top:20px" type="submit" class="btn"><i class="icon-ok"></i>Save</button>
