--- a/src/angular-app/sfadmin/ng-app.html
+++ b/src/angular-app/sfadmin/ng-app.html
@@ -91,9 +91,9 @@
 				<form class="well">
 				<fieldset>
 				<label>Question Template</label>
-				<input type="text" required ng-model="editedTemplate.title" class="span4" rows="4" placeholder="the question"></textarea>
+				<textarea required ng-model="editedTemplate.description" class="span4" rows="4" placeholder="The Question"></textarea>
 				<label></label>
-				<textarea required ng-model="editedTemplate.description" class="span4" rows="4" placeholder="additional explanation of the question"></textarea>
+				<input type="text" maxlength="35" required ng-model="editedTemplate.title" class="span4" rows="4" placeholder="One Line Summary for Title" />
 				<label></label>
 				<button type="submit" class="btn" ng-click="editTemplate()"><i class="icon-ok"></i>Save</button>
 				<a ng-click="hideTemplateEditor()">Cancel</a>
