--- a/src/angular-app/sfchecks/ng-app.html
+++ b/src/angular-app/sfchecks/ng-app.html
@@ -19,7 +19,7 @@
 		</ul>
 		<ul id="top" class="topCrumbs" breadcrumbs></ul>
 	</div>
-	<div ng-controller="MainCtrl">
+	<div style="padding-top:10px" ng-controller="MainCtrl">
 	<sil-notices></sil-notices>
 	<div ng-view></div>
 	</div>
