feature/admin invite: under Site Administrator>User Data - no longer require email field since we can now create users without supplying email.

--- a/src/angular-app/sfadmin/ng-app.html
+++ b/src/angular-app/sfadmin/ng-app.html
@@ -53,7 +53,7 @@
 				</div>
 				<div>
 					<label>Email</label>
-					<input required type="text" placeholder="(no email)" ng-model="record.email"/>
+					<input type="text" placeholder="(no email)" ng-model="record.email"/>
 				</div>
 				<div>
 					<label>Role</label>
